--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,3 +15,10 @@ layout: default
 
   {% include disqus.html %}
 </article>
+
+
+<!-- LikeBtn.com BEGIN -->
+<span class="likebtn-wrapper" data-dislike_enabled="false" data-icon_dislike_show="false" ></span>
+<script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
+<!-- LikeBtn.com END -->
+
